--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,6 @@ extends layout
 
 block content
   h1.
-    Welcome to #{menuTitle} tes
+    Welcome to #{menuTitle} test
 
   img(src='public/hotel_landing_pic.png' class='img-fluid' style='width:400px; height:400px;')
